--- a/index.html
+++ b/index.html
@@ -159,9 +159,12 @@
 
         <!-- FOOTER -->
         <footer>
-             <a href="https://github.com/sheilavp96"><figure class="fig icon-git"><img class="github-icon img-g" src="git.png"/></figure></a>
-            <a href="https://www.linkedin.com/in/sheilavp96/"><figure class="fig icon-lin"><img class="link-icon img-g" src="linkedin.png"/></figure>
+            <h2 class="title-name media">Social media</h2>
+            <div class="social-media">
+             <a class="social" href="https://github.com/sheilavp96"><figure class="fig icon-git"><img class="github-icon img-g" src="git.png"/></figure></a>
+            <a class="social"  href="https://www.linkedin.com/in/sheilavp96/"><figure class="fig icon-lin"><img class="link-icon img-g" src="linkedin.png"/></figure>
         </footer></a>
+    </div>
 
     </body>
 </main>
