--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <p class="icon-name  css-name">CSS</p>
                 <figure class="img-icon js "><img src="javascript.png" class="js-img img-i"></figure>
                 <p class="icon-name js-name">JavaScrips</p>
-                <figure class="img-icon git"><img src="github.png" class="git-img img-i"></figure>
-                <p class="icon-name git-name">Github</p>
+                <figure class="img-icon git"><img src="git.png" class="git-img img-i"></figure>
+                <p class="icon-name git-name">Git</p>
                 <figure class="img-icon ps"><img src="photoshop.png" class="ps-img img-i"></figure>
                 <p class="icon-name ps-name">Photoshop</p>
                 <figure class="img-icon ai"><img src="illustrator.png" class="ai-img img-i"></figure>
@@ -80,7 +80,7 @@
         <!-- QUALIFICATION -->
         <section class="container qualification" id="section--2">
             <div class="title qualification-title">
-                <h1 class="qualification">Qualification</h1>
+                <h1 >Qualification</h1> <!-- class="qualification" -->
                 <h3 class="journey">My personal journey</h3>
             </div>
 
@@ -130,7 +130,7 @@
         </section>
 
         <!-- PORTAFOLIO -->
-        <section class="container" id="section--3">
+        <section class="container container-port" id="section--3">
             <div class="portfolio-title">
                 <h1>Portfolio</h1>
             </div>
@@ -161,8 +161,9 @@
             <div class="social-media">
             <a class="social" href="https://github.com/sheilavp96"><figure class="fig icon-git"><img class="github-icon img-g" src="git.png"/></figure></a>
             <a class="social"  href="https://www.linkedin.com/in/sheilavp96/"><figure class="fig icon-lin"><img class="link-icon img-g" src="linkedin.png"/></figure>
+            </div>
         </footer></a>
-    </div>
+    
     <script src="index.js"></script>
     </body>
 </main>
