Change text of presentation

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="presentation">
                 <h1 class="hi">Hi I'am Sheila</h1>
                 <h3 class="text-frontend">Frontend developer</h3>
-                <p class="text">Biotechnology engineering student in search of professional practice to acquire work experience and knowledge in web development. </p>
+                <p class="text">Biotechnology engineering student seeking professional practice to gain work experience in web development. Eager to apply my knowledge in CSS, html and JavaScript. </p>
                 
             </div>   
             <figure>
